kubernetes/ocp/guestbook-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  selector:
    app: guestbook
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  clusterIP: None
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
        deployment: guestbook
    spec:
      containers:
        - name: guestbook
          image: >-
            ghcr.io/rh-telco-tigers/guestbook-php/guestbook-php:latest
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
